refactor:some  layout changes

--- a/navigation.html
+++ b/navigation.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./component.css">
 </head>
 <body>
-    <main>
+    <div>
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
             <a href="./alert.html">Alert</a>
@@ -49,6 +49,6 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 </body>
 </html>
