--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <main>
+    <div class="container">
+        <!-- <header>Header</header> -->
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a href="./alert.html">Alert</a>
-            <a href="./avatar.html">Avatar</a>
-            <a href="./button.html">Button</a>
-            <a href="./card.html">Card</a>
-            <a href="./image.html">Image</a>
-            <a href="./input.html">Input</a>
-            <a href="./list.html">List</a>
-            <a href="./navigation.html">Navigation</a>
-            <a href="./modal.html">Modal</a>
-            <a href="./Grid.html">Grid</a>
-            <a href="./Utilities.html">Utilities</a>
-            <a href="./toast.html">Toast</a>
+            <a class="sidenav-links" href="./alert.html">Alert</a>
+            <a class="sidenav-links" href="./avatar.html">Avatar</a>
+            <a class="sidenav-links" href="./button.html">Button</a>
+            <a class="sidenav-links" href="./card.html">Card</a>
+            <a class="sidenav-links" href="./image.html">Image</a>
+            <a class="sidenav-links" href="./input.html">Input</a>
+            <a class="sidenav-links" href="./list.html">List</a>
+            <a class="sidenav-links" href="./navigation.html">Navigation</a>
+            <a class="sidenav-links" href="./modal.html">Modal</a>
+            <a class="sidenav-links" href="./Grid.html">Grid</a>
+            <a class="sidenav-links" href="./Utilities.html">Utilities</a>
+            <a class="sidenav-links"href="./toast.html">Toast</a>
         </aside>
-        <div class="content">
+        <main>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, sed fugit? Ad consectetur, laboriosam animi est beatae modi quasi harum corporis illum omnis natus reprehenderit fugiat ullam perferendis facilis iure?
 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, temporibus recusandae magnam eum soluta officia! Veniam maxime, dicta fugiat porro ea possimus necessitatibus, alias nam similique quam veritatis provident ut?
@@ -32,7 +33,8 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti adipisci quos quasi quibusdam autem ea sint asperiores rem, molestiae maiores, officiis praesentium ducimus porro quia nulla culpa! Excepturi, rem voluptatum.
 
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laboriosam iure itaque, et velit blanditiis a quisquam dicta pariatur. Distinctio aliquam consectetur at voluptatem corrupti aperiam magni repudiandae ipsam dolore?
-        </div>
-    </main>
+        </main>
+        <footer></footer>
+    </div>
 </body>
 </html>
