--- a/Grid.html
+++ b/Grid.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <main>
+    <div class="container">
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a href="./alert.html">Alert</a>
-            <a href="./avatar.html">Avatar</a>
-            <a href="./button.html">Button</a>
-            <a href="./card.html">Card</a>
-            <a href="./image.html">Image</a>
-            <a href="./input.html">Input</a>
-            <a href="./list.html">List</a>
-            <a href="./navigation.html">Navigation</a>
-            <a href="./modal.html">Modal</a>
-            <a href="./Grid.html">Grid</a>
-            <a href="./Utilities.html">Utilities</a>
-            <a href="./toast.html">Toast</a>
+            <a class="sidenav-links" href="./alert.html">Alert</a>
+            <a class="sidenav-links" href="./avatar.html">Avatar</a>
+            <a class="sidenav-links" href="./button.html">Button</a>
+            <a class="sidenav-links" href="./card.html">Card</a>
+            <a class="sidenav-links" href="./image.html">Image</a>
+            <a class="sidenav-links" href="./input.html">Input</a>
+            <a class="sidenav-links" href="./list.html">List</a>
+            <a class="sidenav-links" href="./navigation.html">Navigation</a>
+            <a class="sidenav-links" href="./modal.html">Modal</a>
+            <a class="sidenav-links" href="./Grid.html">Grid</a>
+            <a class="sidenav-links" href="./Utilities.html">Utilities</a>
+            <a class="sidenav-links" href="./toast.html">Toast</a>
         </aside>
-        <div class="content">
+        <main>
             <h2 class="Main-Heading">Grid</h2>
             <p>Grid are very important to build layouts of all shapes and sizes thanks to a twelve column system.It uses series of containers,rows and columns to layout and align content.</p>
             <h4 class="subheadingAvatar">Some Example</h4>
@@ -104,8 +104,8 @@
                     src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%253Cdiv%2520class%253D%2522gridContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522grid-mixed%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block1%2522%253EBlock-1%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block2%2522%253EBlock-2%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522%2520block%2520block3%2522%253EBlock-3%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block4%2522%253EBlock-4%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block5%2522%253EBlock-5%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block6%2522%253EBlock-6%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block7%2522%253EBlock-7%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block8%2522%253EBlock-8%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522block%2520block9%2522%253EBlock-9%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
                     style="width: 736px; height: 425px; border:0; transform: scale(1); overflow:hidden;"
                     sandbox="allow-scripts allow-same-origin">
-                 </iframe>
-        </div>
-    </main>
+              </iframe>
+      </main>
+    </div>
 </body>
 </html>
