--- a/avatar.html
+++ b/avatar.html
@@ -10,23 +10,23 @@
 
 </head>
 <body>
-    <main>
+    <div class="container">
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a href="./alert.html">Alert</a>
-            <a href="./avatar.html">Avatar</a>
-            <a href="./button.html">Button</a>
-            <a href="./card.html">Card</a>
-            <a href="./image.html">Image</a>
-            <a href="./input.html">Input</a>
-            <a href="./list.html">List</a>
-            <a href="./navigation.html">Navigation</a>
-            <a href="./modal.html">Modal</a>
-            <a href="./Grid.html">Grid</a>
-            <a href="./Utilities.html">Utilities</a>
-            <a href="./toast.html">Toast</a>
+            <a class="sidenav-links" href="./alert.html">Alert</a>
+            <a class="sidenav-links" href="./avatar.html">Avatar</a>
+            <a class="sidenav-links" href="./button.html">Button</a>
+            <a class="sidenav-links" href="./card.html">Card</a>
+            <a class="sidenav-links" href="./image.html">Image</a>
+            <a class="sidenav-links" href="./input.html">Input</a>
+            <a class="sidenav-links" href="./list.html">List</a>
+            <a class="sidenav-links" href="./navigation.html">Navigation</a>
+            <a class="sidenav-links" href="./modal.html">Modal</a>
+            <a class="sidenav-links" href="./Grid.html">Grid</a>
+            <a class="sidenav-links" href="./Utilities.html">Utilities</a>
+            <a class="sidenav-links" href="./toast.html">Toast</a>
         </aside>
-        <div class="content">
+        <main>
             <h2 class="Main-Heading">Avatar</h2>
             <p class="descriptionAvatar">The avatar component is used to represent a user and displays the profile picture,initials or fallback icon and provide contextful feedback message for typical user actions.</p>
             <h4 class="subheadingAvatar">Some Example</h4>
@@ -41,7 +41,7 @@
                 style="width: 722px; height: 282px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
             </iframe>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
