--- a/image.html
+++ b/image.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" type="text/css" href="./component.css">
 </head>
 <body>
-    <main>
+    <div class="container">
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a href="./alert.html">Alert</a>
-            <a href="./avatar.html">Avatar</a>
-            <a href="./button.html">Button</a>
-            <a href="./card.html">Card</a>
-            <a href="./image.html">Image</a>
-            <a href="./input.html">Input</a>
-            <a href="./list.html">List</a>
-            <a href="./navigation.html">Navigation</a>
-            <a href="./modal.html">Modal</a>
-            <a href="./Grid.html">Grid</a>
-            <a href="./Utilities.html">Utilities</a>
-            <a href="./toast.html">Toast</a>
+            <a class="sidenav-links" href="./alert.html">Alert</a>
+            <a class="sidenav-links" href="./avatar.html">Avatar</a>
+            <a class="sidenav-links" href="./button.html">Button</a>
+            <a class="sidenav-links" href="./card.html">Card</a>
+            <a class="sidenav-links" href="./image.html">Image</a>
+            <a class="sidenav-links" href="./input.html">Input</a>
+            <a class="sidenav-links" href="./list.html">List</a>
+            <a class="sidenav-links" href="./navigation.html">Navigation</a>
+            <a class="sidenav-links" href="./modal.html">Modal</a>
+            <a class="sidenav-links" href="./Grid.html">Grid</a>
+            <a class="sidenav-links" href="./Utilities.html">Utilities</a>
+            <a class="sidenav-links" href="./toast.html">Toast</a>
         </aside>
 
-        <div class="content">
+        <main>
             <h2 class="Main-Heading">Image</h2>
             <p class="descriptionAvatar">The Image Component is used to display images.You can use them in your cards,background,display-image and what else.This component also contains responsive behaviour(so that they never become larger than their parent elements) and add lightweight styles to them.</p>
             <h4 class="subheadingAvatar">Some example</h4>
@@ -109,7 +109,7 @@
                     style="width: 736px; height: 713px; border:0; transform: scale(1); overflow:hidden;"
                     sandbox="allow-scripts allow-same-origin">
               </iframe>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
