add : the modified landing page

--- a/image.html
+++ b/image.html
@@ -92,7 +92,7 @@
               </div>
 
 
-              <div class="imageContainer">
+              <div class="imageContainer1">
                 <div class="image horizontal1">
                     <img src="./Resources /Images/domenico-loia-hGV2TfOh0ns-unsplash.jpg" alt="Image-Example"
                     height="200px" width="200px">
