--- a/index.html
+++ b/index.html
@@ -6,35 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Intrinsic UI</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./component.css">
 </head>
 <body>
-    <div class="container">
-        <!-- <header>Header</header> -->
-        <aside>
-            <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a class="sidenav-links" href="./alert.html">Alert</a>
-            <a class="sidenav-links" href="./avatar.html">Avatar</a>
-            <a class="sidenav-links" href="./button.html">Button</a>
-            <a class="sidenav-links" href="./card.html">Card</a>
-            <a class="sidenav-links" href="./image.html">Image</a>
-            <a class="sidenav-links" href="./input.html">Input</a>
-            <a class="sidenav-links" href="./list.html">List</a>
-            <a class="sidenav-links" href="./navigation.html">Navigation</a>
-            <a class="sidenav-links" href="./modal.html">Modal</a>
-            <a class="sidenav-links" href="./Grid.html">Grid</a>
-            <a class="sidenav-links" href="./Utilities.html">Utilities</a>
-            <a class="sidenav-links"href="./toast.html">Toast</a>
-        </aside>
-        <main>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, sed fugit? Ad consectetur, laboriosam animi est beatae modi quasi harum corporis illum omnis natus reprehenderit fugiat ullam perferendis facilis iure?
+    <header>
+        <div class="logo1">
+            <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png"
+            alt="branding-loog"
+            >
+        </div>
+        <nav>
+            <ul>
+                <a href="#"><li class="nav-links">Home</li></a>
+                <li class="nav-links">Documentation</li>
+                <li class="nav-links">Connect With Me</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1 class="tagline">Build interactive and faster web applications with modern component library <span>with ease</span>.</h1>
+        <h4 class="shortdescription">Intrinsic UI is an open-source,simple and modular component library that provides basic building blocks needed for web applications.</h4>
+        <div class="btn-group">
+            <button class="btn primary home-btn"><a style="text-decoration: none;color: white;" href="./alert.html">Get Started</a></button>
+            <button class="btn light home-btn">Github</button>
+        </div>
+    </main>
+    <footer>
+        <p>Proudly made in <img src="./Resources /Images/indian flag.jpg" height="25px" width="25px"> by <strong>Sanskar Choubey</strong><br/>
+        © 2021 Intrinsic UI Inc.All rights reserved.</p>
+        <span class="social-links">
+            <a href="https://github.com/Sanskar-Choubey"><img src="./Resources /Icons/png/001-github.png" alt="github-logo" height="20px" width="20px"></a>
+            <a href="https://twitter.com/Sanskar_o07"><img src="./Resources /Icons/png/002-twitter.png" alt="github-logo" height="20px" width="20px"></a>
+            <a href="https://www.linkedin.com/in/sanskar-choubey-8316951ab/"><img src="./Resources /Icons/png/003-linkedin.png" alt="linkedin-logo" height="20px" width="20px"></a>
+        </span>
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, temporibus recusandae magnam eum soluta officia! Veniam maxime, dicta fugiat porro ea possimus necessitatibus, alias nam similique quam veritatis provident ut?
-
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti adipisci quos quasi quibusdam autem ea sint asperiores rem, molestiae maiores, officiis praesentium ducimus porro quia nulla culpa! Excepturi, rem voluptatum.
-
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laboriosam iure itaque, et velit blanditiis a quisquam dicta pariatur. Distinctio aliquam consectetur at voluptatem corrupti aperiam magni repudiandae ipsam dolore?
-        </main>
-        <footer></footer>
-    </div>
+    </footer>
 </body>
 </html>
