--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation | Intrinsic UI</title>
+    <title>Getting Started | Intrinsic UI</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./component.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -23,33 +24,29 @@
             <a class="sidenav-links" href="./list.html">List</a>
             <a class="sidenav-links" href="./navigation.html">Navigation</a>
             <a class="sidenav-links" href="./modal.html">Modal</a>
+            <a class="sidenav-links" href="./Grid.html">Grid</a>
             <a class="sidenav-links" href="./Utilities.html">Utilities</a>
             <a class="sidenav-links" href="./toast.html">Toast</a>
         </aside>
         <main>
-            <h2 class="Main-Heading">Navigation</h2>
-            <p class="descriptionAvatar">This is the component which is the basic buidling block of every website i.e. navbar.It includes support for branding,navigation and more.</p>
+            <h2 class="Main-Heading">Introduction</h2>
+            <p class="descriptionAvatar">This is a simple,modular and open-source component library developed keeping in mind the ease and comfort required while developing web applications.</p>
 
+            <br>
 
-            <h4 class="subheadingAvatar">Desktop(simple Navigation bar)</h4>
-            <div class="navContainer">
-                <div class="navbar">
-                    <div class="logo">
-                        <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png" alt="branding"
-                        height="80px"
-                        width="80px">
-                    </div>
-                    <div class="navLinks">
-                        <ul>
-                            <li>Home</li>
-                            <li>Documentation</li>
-                            <li>Features</li>
-                            <li>About Us</li>
-                            <li>Contact</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <p class="descriptionAvatar">So if you want to include it in your project here is the component file.
+            <br>
+
+            <a href="./component.css" download><button class="btn primary"><i class="fa fa-download"></i> Download</button></a>
+            </p>
+
+            <p class="descriptionAvatar">Than include it in your project.</p>
+
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=blackboard&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=49px&ph=52px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Clink%2520rel%253D%2522stylesheet%2522%2520type%253D%2522text%252Fcss%2522%2520href%253D%2522.%252Fcomponent.css%2522%253E"
+                style="width: 680px; height: 196px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
         </main>
     </div>
 </body>
