--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <nav>
             <ul>
                 <a href="#"><li class="nav-links">Home</li></a>
-                <li class="nav-links">Documentation</li>
-                <li class="nav-links">Connect With Me</li>
+                <a href="gettingStarted.html"><li class="nav-links">Documentation</li></a>
             </ul>
         </nav>
     </header>
@@ -27,7 +26,7 @@
         <h1 class="tagline">Build interactive and faster web applications with modern component library <span>with ease</span>.</h1>
         <h4 class="shortdescription">Intrinsic UI is an open-source,simple and modular component library that provides basic building blocks needed for web applications.</h4>
         <div class="btn-group">
-            <button class="btn primary home-btn"><a style="text-decoration: none;color: white;" href="./alert.html">Get Started</a></button>
+            <button class="btn primary home-btn"><a style="text-decoration: none;color: white;" href="./gettingStarted.html">Get Started</a></button>
             <button class="btn light home-btn">Github</button>
         </div>
     </main>
