--- a/input.html
+++ b/input.html
@@ -13,6 +13,8 @@
     <div class="container">
         <aside>
             <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
+            <a class="sidenav-links" href="./index.html">Home</a>
+            <a class="sidenav-links" href="./gettingStarted.html">Getting Started</a>
             <a class="sidenav-links" href="./alert.html">Alert</a>
             <a class="sidenav-links" href="./avatar.html">Avatar</a>
             <a class="sidenav-links" href="./button.html">Button</a>
