style:made changes based on feedback

--- a/alert.html
+++ b/alert.html
@@ -11,8 +11,7 @@
 <body>
     <div class="container">
         <aside>
-            <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a class="sidenav-links" href="./index.html">Home</a>
+            <a href="./index.html"><img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png"></a>
             <a class="sidenav-links" href="./gettingStarted.html">Getting Started</a>
             <a class="sidenav-links" href="./alert.html">Alert</a>
             <a class="sidenav-links" href="./avatar.html">Avatar</a>
@@ -29,8 +28,8 @@
         </aside>
         <main>
             <h2 class="Main-Heading">Alert</h2>
-            <p class="descriptionAvatar">Alerts are used to communicate a state that effects a system,feature or page.</p>
-            <h4 class="subheadingAvatar">Some Example</h4>
+            <p class="description">Alerts are used to communicate a state that effects a system,feature or page.</p>
+            <h4 class="subheading">Some Example</h4>
 
             <div class="alertContainer">
                 <div class="alertContent">
@@ -39,8 +38,8 @@
                 </div>
             </div>
 
-            <h4 class="subheadingAvatar">Alert Status</h4>
-            <p class="descriptionAvatar">There are various states of the alerts.This affects the color schemes and icon used.
+            <h4 class="subheading">Alert Status</h4>
+            <p class="description">There are various states of the alerts.This affects the color schemes and icon used.
             Based on the requirements these can be used accordingly.
             </p>
 
@@ -64,13 +63,13 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%253Cdiv%2520class%253D%2522alertStatusContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520error%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%252FImages%252Falert.png%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Error%21Some%2520error%2520occured.Please%2520check%2520your%2520connection%2520%250A%2509%2509%2509%2520%253C%252Fh6%253E%250A%2509%2520%2520%2520%2520%2520%253C%252Fdiv%253E%2520%2520%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%252FImages%252Falert1.png%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%2509%250A%2509%2509%2509%2509%2509Success%21Operations%2520performed%2520successfully%250A%2509%2509%2509%2520%2520%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2509%2509%2520%253Cdiv%2520class%253D%2522statusContainer%2520warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%252FImages%252Falert3.jpg%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Warning%21Your%2520subscription%2520will%2520end%2520soon.%250A%2509%2509%2509%2520%2520%2520%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2509%2509%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520info%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%252FImages%252Falert4.jpg%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Info%21The%2520system%2520will%2520go%2520under%2520maintainence%2520on%252030th%2520January.%250A%2509%2509%2509%2520%2520%2520%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%2520%2520%2520%2520%2520%2520%250A%2509%253C%252Fdiv%253E"
-                style="width: 925px; height: 713px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
+  src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=false&pv=20px&ph=17px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522alertStatusContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520error%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%2509%2509%2509%2509%2509%2509%2520%2520%252FImages%252Falert.png%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Error%21Some%2520error%2520occured.Please%2520check%2520your%2520%2509%2509%2509%2509%2509%2520%2520%2520connection%2520%250A%2509%2509%2509%2509%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%2520%2520%2520%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%2509%2509%2509%2509%2509%2509%252FImages%252Falert1.png%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Success%21Operations%2520performed%2520%2509%2509%2509%2509%2509%2509%2509%2509successfully%250A%2509%2509%2509%2509%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%2509%2509%2509%2509%2509%2520%2520%2520%2520%2520%252FImages%252Falert3.jpg%2522alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Warning%21Your%2520subscription%2520will%2520end%2520soon.%2509%2509%2509%2509%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522statusContainer%2520info%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520%2520class%253D%2522alertIcon%2522%2520src%253D%2522.%252FResources%2520%2509%2509%2509%2509%2509%2509%252FImages%252Falert4.jpg%2522%2520alt%253D%2522alertIcon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%2520class%253D%2522alertDescription%2522%253E%250A%2509%2509%2509%2509%2509Info%21The%2520system%2520will%2520go%2520under%2520maintainence%2520%2509%2509%2509%2509%2509%2520%2520%2520on%252030th%2520January.%250A%2509%2509%2509%2509%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A"
+  style="width: 600px; height: 803px; border:0; transform: scale(1); overflow:hidden;"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
 
-            <h4 class="subheadingAvatar">Alert Styles</h4>
-            <p class="descriptionAvatar">There are different variants of alerts available.You can select as per your need.</p>
+            <h4 class="subheading">Alert Styles</h4>
+            <p class="description">There are different variants of alerts available.You can select as per your need.</p>
             <div class="stylesContainer">
                 <div class="alertStyle normal">
                     <img  class="alertIcon" src="./Resources /Images/alert1.png" alt="alertIcon">
