--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -12,8 +12,7 @@
 <body>
     <div class="container">
         <aside>
-            <img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png">
-            <a class="sidenav-links" href="./index.html">Home</a>
+            <a href="index.html"><img src="./Resources /Images/34fffdef917945ad8cae660bd20a3be8.png"></a>
             <a class="sidenav-links" href="./gettingStarted.html">Getting Started</a>
             <a class="sidenav-links" href="./alert.html">Alert</a>
             <a class="sidenav-links" href="./avatar.html">Avatar</a>
