--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <nav>
             <ul>
-                <a href="#"><li class="nav-links">Home</li></a>
-                <a href="gettingStarted.html"><li class="nav-links">Documentation</li></a>
+                <a style="text-decoration: none;" href="#"><li class="nav-links">Home</li></a>
+                <a style="text-decoration: none;" href="gettingStarted.html"><li class="nav-links">Documentation</li></a>
             </ul>
         </nav>
     </header>
@@ -27,11 +27,12 @@
         <h4 class="shortdescription">Intrinsic UI is an open-source,simple and modular component library that provides basic building blocks needed for web applications.</h4>
         <div class="btn-group">
             <button class="btn primary home-btn"><a style="text-decoration: none;color: white;" href="./gettingStarted.html">Get Started</a></button>
-            <button class="btn light home-btn">Github</button>
+            <button class="btn light home-btn"><a 
+                style="text-decoration: none;color: black;" href="https://github.com/Sanskar-Choubey/Modified-Component-Library">Github</a></button>
         </div>
     </main>
     <footer>
-        <p>Proudly made in <img src="./Resources /Images/indian flag.jpg" height="25px" width="25px"> by <strong>Sanskar Choubey</strong><br/>
+        <p>Proudly made in <img src="./Resources /Images/india.png" height="27px" width="30px"> by <strong>Sanskar Choubey</strong><br/>
         © 2021 Intrinsic UI Inc.All rights reserved.</p>
         <span class="social-links">
             <a href="https://github.com/Sanskar-Choubey"><img src="./Resources /Icons/png/001-github.png" alt="github-logo" height="20px" width="20px"></a>
